<resources>
    <string name="app_name">LoginSignUpDemo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_completed">Sign in completed!</string>
    <string name="password_did_not_match">Your password did not match!!!</string>
    <string name="password_less_than_required">Your password should be greater than 6 characters!!!</string>
    <string name="email_not_valid">Invalid email Address!!!</string>
    <string name="must_implement_fragment">must implement OnFragmentInteractionListener</string>
</resources>
